[package]
name = "gst-plugin-dashcmafsink"
description = "DASH - Gstreamer plugin"
authors = ["Roberto Viola"]
repository = "https://github.com/"
license = "MIT OR Apache-2.0"

version = "0.1.7"
edition = "2021"

[dependencies]
gst = { package = "gstreamer", version = "0.23" }
gst-base = { package = "gstreamer-base", version = "0.23" }
gst-app = { package = "gstreamer-app", version = "0.23"}
gst-pbutils = { package = "gstreamer-pbutils", version = "0.23"}
gio = { version = "0.20"}
dash-mpd = { version = "0.18", default-features = false }
quick-xml = { version = "0.37", features = ["serialize"] }
chrono = "0.4"
sprintf = "0.4"
serde = "1"

once_cell = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
anyhow = { version = "1", features = ["backtrace"] }
url = "2"

[build-dependencies]
gst-plugin-version-helper = "0.8"

[lib]
name = "gstdashcmafsink"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"